[gd_scene load_steps=2 format=3 uid="uid://c6het52418hfo"]

[ext_resource type="Script" uid="uid://3mwapkenvdo0" path="res://scripts/menu/Lobby.gd" id="1_2k4jl"]

[node name="lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2k4jl")

[node name="menu" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0

[node name="lobby_id" type="TextEdit" parent="menu"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
placeholder_text = "lobby id"

[node name="join" type="Button" parent="menu"]
layout_mode = 2
text = "Join"

[node name="host" type="Button" parent="menu"]
layout_mode = 2
text = "Host"

[node name="lobby_menu" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0

[node name="ready" type="Button" parent="lobby_menu"]
layout_mode = 2
toggle_mode = true
text = "Ready"

[node name="start" type="Button" parent="lobby_menu"]
layout_mode = 2
text = "Start Game"

[node name="invite" type="Button" parent="lobby_menu"]
layout_mode = 2
text = "Invite"

[node name="disconnect" type="Button" parent="lobby_menu"]
layout_mode = 2
text = "Disconnect"

[node name="chat" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_bottom = 1.0
grow_vertical = 0

[node name="chatbox" type="Label" parent="chat"]
layout_mode = 2

[node name="chatinput" type="LineEdit" parent="chat"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
placeholder_text = "chat"

[node name="send" type="Button" parent="chat"]
layout_mode = 2
text = "Send"

[node name="players" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1

[connection signal="pressed" from="menu/join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="menu/host" to="." method="_on_host_pressed"]
[connection signal="toggled" from="lobby_menu/ready" to="." method="_on_ready_toggled"]
[connection signal="pressed" from="lobby_menu/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="lobby_menu/invite" to="." method="_on_invite_pressed"]
[connection signal="pressed" from="lobby_menu/disconnect" to="." method="_on_disconnect_pressed"]
[connection signal="text_submitted" from="chat/chatinput" to="." method="_on_chatinput_text_submitted"]
[connection signal="pressed" from="chat/send" to="." method="_on_send_pressed"]
